# entity-framework

./: .gitignore  BackgroundCollidableComponent.h  BackgroundCollisionSystem.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityEngine.h  EntityOperation.h  EntitySystem.cpp  EntitySystem.h  README.md  RenderableComponent.cpp  RenderableComponent.h  RenderingSystem.h  main.cpp
src/: BitSetUtility.h  ClassTypeId.h  Component.h  ComponentFamily.cpp  ComponentFamily.h  ComponentFamilyBuilder.cpp  ComponentFamilyBuilder.h  ComponentOperationHandler.cpp  ComponentOperationHandler.h  Entity.cpp  Entity.h  EntityConfiguration.h  EntityEngine.cpp  EntityEngine.h  EntityOperation.h  EntitySystem.cpp  EntitySystem.h
test/: BackgroundCollidableComponent.cpp  BackgroundCollidableComponent.h  BackgroundCollisionSystem.cpp  BackgroundCollisionSystem.h  ControlComponent.h  EnemySystem.h  Main.cpp  PlayerComponent.h  PlayerSystem.h  RenderableComponent.cpp  RenderableComponent.h  RenderingSystem.cpp  RenderingSystem.h  main.cpp
